--- a/example/src/AppBundle/Resources/public/login/login.html
+++ b/example/src/AppBundle/Resources/public/login/login.html
@@ -3,6 +3,6 @@
     <img src="https://i.cloudup.com/StzWWrY34s.png" />
     <h3>Auth0 Example</h3>
     <p>Zero friction identity infrastructure, built for developers</p>
-    <a ng-click="login()" class="btn btn-primary btn-lg btn-block">SignIn</a>
+    <a ng-click="lock.show()" class="btn btn-primary btn-lg btn-block">SignIn</a>
   </div>
 </div>
